--- a/index.html
+++ b/index.html
@@ -5,15 +5,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link rel="stylesheet" href="./css/style.css">
   
   <title>Frontend Mentor | Pod request access landing page</title>
 </head>
 <body>
-  Publish your podcasts everywhere.
 
-  Upload your audio to Pod with a single click. We’ll then distribute your podcast to Spotify, 
-  Apple Podcasts, Google Podcasts, Pocket Casts and more!
+<img class="logo"  src="./assets/desktop/logo.svg" alt="logo">
 
-  Request access
+<div class="card">
+
+    <p class="titre-1"> Publish your podcasts</p> <p class="titre-2">everywhere.</p>
+
+    <p class="text">Upload your audio to Pod with a single click. We’ll then distribute your podcast to Spotify, 
+    Apple Podcasts, Google Podcasts, Pocket Casts and more!</p>
+
+
+    <form class="form">
+
+      <input id="email" type="text" value="Email address">
+
+      <input class="submit" type="submit" value="Request access">
+
+    </form>
+
+  <div class="bloc-icone">
+    <img class="icone" src="./assets/desktop/spotify.svg" alt="Spotify">
+    <img class="icone" src="./assets/desktop/apple-podcast.svg" alt="apple">
+    <img class="icone" src="./assets/desktop/google-podcasts.svg" alt="google">
+    <img class="icone" src="./assets/desktop/pocket-casts.svg" alt="pocketcast">
+  </div>
+  
+</div>
+
+<img class="img-fond" src="./assets/desktop/image-host.jpg" alt="img-fond">
+
+<img class="pattern-dot" src="./assets/desktop/bg-pattern-dots.svg" alt="pattern-dot">
+
+
+
+
+<script src="./script.js"></script>
 </body>
 </html>
